--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Padil">
         <activity
-            android:name=".SemuaProduk"
+            android:name=".Activity.SemuaProduk"
             android:exported="false" />
         <activity
             android:name=".Activity.DetailProduk"
