Update new fiture

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Padil">
         <activity
+            android:name=".Activity.Profile"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.KonfirmasiPembayaran"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.DetailTransaksi"
+            android:exported="false" />
+        <activity
             android:name=".Activity.Pembayaran"
             android:exported="false" />
         <activity
@@ -20,9 +29,6 @@
             android:exported="false" />
         <activity
             android:name=".Activity.AlamatPengiriman"
-            android:exported="false" />
-        <activity
-            android:name=".Activity.Notifikasi"
             android:exported="false" />
         <activity
             android:name=".Activity.Keranjang"
