Add New Feature + Fixed Bug
- Riwayat Belanja [USER]
- Admin Panel [Add & View Produk, Profile Panel For Admin, Delete Button at Pesanan]
- Fixed Bug [Crash while scroll at Keranjang, TextUtils in Add Product not work]

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     //ImageSlider
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 
+    //Spinner Hint
+    implementation 'me.srodrigo:androidhintspinner:1.0.0'
+
 
 
 }
